# temporal-terraform

./: .envrc.template  .gitignore  README.md  pyproject.toml
workflows/: hello.py  runner.py  secrets.py
workspaces/azure/: README.md  azure.tf  import.md  provider.tf  temporal.tf  terraform.tfvars  variables.tf
workspaces/bootstrap/: README.md  bootstrap.tf  provider.tf  variables.tf
workspaces/bootstrap/azure_tls/: README.md  azure.tf  provider.tf  tls.tf  variables.tf
workspaces/bootstrap/gcp_tls/: README.md  gcp.tf  provider.tf  variables.tf
workspaces/gcp/: README.md  gcp.tf  import.md  provider.tf  terraform.tfvars  variables.tf
workspaces/starter/: README.md  main.tf  provider.tf  starter.tf  variables.tf
